--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@iconify/json": "^2.2.189",
+    "@iconify/vue": "^4.1.1",
+    "@vue/compiler-sfc": "^3.4.21",
+    "unplugin-icons": "^0.18.5",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
     "vuex": "^4.0.2"
@@ -31,6 +35,7 @@
     "jsdom": "^24.0.0",
     "postcss": "^8.4.35",
     "prettier": "^3.0.3",
+    "sass": "^1.71.1",
     "start-server-and-test": "^2.0.3",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.11",
