update: work eperience and education

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "test:e2e": "start-server-and-test preview http://localhost:4173 'cypress run --e2e'",
     "test:e2e:dev": "start-server-and-test 'vite dev --port 4173' http://localhost:4173 'cypress open --e2e'",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "json-run": "json-server --watch db.json"
   },
   "dependencies": {
     "@iconify/json": "^2.2.189",
     "@vue/compiler-sfc": "^3.4.21",
+    "axios": "^1.6.7",
     "unplugin-icons": "^0.18.5",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
