--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "@iconify/json": "^2.2.189",
     "@vue/compiler-sfc": "^3.4.21",
     "axios": "^1.6.7",
+    "gsap": "^3.12.5",
+    "split-text-js": "^1.0.3",
+    "swiper": "^11.0.7",
     "unplugin-icons": "^0.18.5",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5",
