--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "json-run": "json-server --watch db.json"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.5.2",
     "@iconify/json": "^2.2.189",
     "@vue/compiler-sfc": "^3.4.21",
     "axios": "^1.6.7",
