--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "swiper": "^11.0.7",
     "unplugin-icons": "^0.18.5",
     "vue": "^3.4.15",
+    "vue-final-modal": "^4.5.4",
     "vue-router": "^4.2.5",
     "vue3-carousel": "^0.3.3",
     "vuex": "^4.0.2"
