--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "unplugin-icons": "^0.18.5",
     "vue": "^3.4.15",
     "vue-final-modal": "^4.5.4",
+    "vue-js-progress": "^1.0.2",
     "vue-router": "^4.2.5",
     "vue3-carousel": "^0.3.3",
     "vuex": "^4.0.2"
