--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@iconify/json": "^2.2.189",
     "@vue/compiler-sfc": "^3.4.21",
     "axios": "^1.6.7",
+    "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "split-text-js": "^1.0.3",
     "swiper": "^11.0.7",
@@ -27,6 +28,7 @@
     "vue-final-modal": "^4.5.4",
     "vue-js-progress": "^1.0.2",
     "vue-router": "^4.2.5",
+    "vue-sweetalert2": "^5.0.11",
     "vue3-carousel": "^0.3.3",
     "vuex": "^4.0.2"
   },
