--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -37,6 +37,12 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm install
+      - name: Create .env and write into it
+        run: |
+          touch .env
+          echo "MAIL_SERVICE_ID=${{ secrets.MAIL_SERVICE_ID }}\
+            MAIL_TEMPLATE_ID=${{ secrets.MAIL_TEMPLATE_ID }}\
+            MAIL_USER_ID=${{ secrets.MAIL_USER_ID }}" > .env
       - name: Build
         run: npm run build
       - name: Setup Pages
