--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@iconify/json": "^2.2.189",
     "@vue/compiler-sfc": "^3.4.21",
     "axios": "^1.6.7",
+    "dotenv": "^16.4.5",
     "emailjs-com": "^3.2.0",
     "gsap": "^3.12.5",
     "split-text-js": "^1.0.3",
